--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -294,25 +294,17 @@
 
                 jQuery(this).removeClass('active');
 
-                jQuery('.em-navbar').css('display', 'none');
-
-                jQuery('div.row.header div.menu').css('display', 'block');
-                jQuery('div.row.header div.menu > .header-menu-item').css('display', 'block');
-
-                jQuery('div.row.header div.menu > .search').css('display', 'none');                
+                jQuery('div.row.header div.menu').css('display', 'none');
             }
             else{
-
-                jQuery(this).addClass('active');
 
                 jQuery('.nav-toggle').removeClass('active');
 
                 jQuery('.em-navbar').css('display', 'none');
 
-                jQuery('div.row.header div.menu').css('display', 'block');
-                jQuery('div.row.header div.menu > .header-menu-item').css('display', 'none');
+                jQuery(this).addClass('active');
 
-                jQuery('div.row.header div.menu > .search').css('display', 'block');
+                jQuery('div.row.header div.menu').css('display', 'block');
             }
 
             setTimeout(function(){
@@ -332,19 +324,18 @@
             if( jQuery(this).hasClass( 'active' ) ){
 
                 jQuery(this).removeClass('active');
-                jQuery('.em-navbar').css('display', 'none');
 
-                jQuery('div.row.header div.menu').css('display', 'block');
-                jQuery('div.row.header div.menu > .header-menu-item').css('display', 'block');
+                jQuery('.em-navbar').css('display', 'none');
             }
             else{
 
-                jQuery(this).addClass('active');
-                jQuery('.em-navbar').css('display', 'block');
-
                 jQuery('.search-toggle').removeClass('active');
+
                 jQuery('div.row.header div.menu').css('display', 'none');
-                jQuery('div.row.header div.menu > .search').css('display', 'none');
+
+                jQuery(this).addClass('active');
+
+                jQuery('.em-navbar').css('display', 'block');
             }
 
             setTimeout(function(){
@@ -354,6 +345,7 @@
 
                     jQuery('.unisubs-videoTab').attr('style', 'visibility: visible !important; left: 16px !important; top: '+t.top +'px !important;');
                 }
+
             }, 10);
         });
 
@@ -384,8 +376,8 @@
 
                         jQuery('.unisubs-videoTab').attr('style', 'visibility: visible !important; left: 16px !important; top: '+t.top +'px !important;');
                     }
-                }, 10);
 
+                }, 10);
             // }
         });
 
