--- a/em/skin/theme_resources/video.html
+++ b/em/skin/theme_resources/video.html
@@ -291,12 +291,25 @@
 
     function resizePlayer(){ 
         if ($(window).width() < 650 ) {
-            mejs.players[0].setPlayerSize($(window).width()-25,($(window).width()-25)/1.75);
-            mejs.players[0].setControlsSize();
-            $('div.videobar').width($(window).width()-25);
-            try{ mejs.players[0].setVideoSize($(window).width()-25,($(window).width()-25)/1.75); } catch(err) {}
+
+            if(  mejs.players[0] !== undefined ){
+                mejs.players[0].setPlayerSize($(window).width()-25,($(window).width()-25)/1.75);
+                mejs.players[0].setControlsSize();
+                $('div.videobar').width($(window).width()-25);
+                try{ mejs.players[0].setVideoSize($(window).width()-25,($(window).width()-25)/1.75); } catch(err) {}
+            }
+
+            jQuery('div.row.header div.menu').css('display', 'block');
+            jQuery('div.row.header div.menu > .header-menu-item').css('display', 'block');
+            jQuery('div.row.header div.menu > .search').css('display', 'none');
+            jQuery('.nav-toggle, .search-toggle').removeClass('active');
+
         } else {
             $('div.videobar').attr('style','');
+
+            jQuery('div.row.header div.menu').css('display', 'block');
+            jQuery('div.row.header div.menu > .header-menu-item').css('display', 'block');
+            jQuery('div.row.header div.menu > .search').css('display', 'block');
         }
     };
 
