--- a/em/skin/theme_resources/author.html
+++ b/em/skin/theme_resources/author.html
@@ -33,6 +33,9 @@
 
 </head>
 <body>
+    <div id="top-viewlet">a
+    </div>
+
     <div id="upper-container">
         <div class="row no-v-padding header">
             <div class="twelve columns header">
