--- a/em/skin/theme_resources/taxonomy.html
+++ b/em/skin/theme_resources/taxonomy.html
@@ -24,6 +24,9 @@
     <span id="css"></span>
 </head>
 <body>
+    <div id="top-viewlet">a
+    </div>
+
     <div id="top-menu">
         <div class="row no-v-padding">
             <ul class="header-menu-item" id="language-menu">
