--- a/em/skin/theme_resources/video.html
+++ b/em/skin/theme_resources/video.html
@@ -34,6 +34,9 @@
 </head>
 
 <body>
+    <div id="top-viewlet">a
+    </div>
+
     <div id="upper-container">
         <div class="row no-v-padding header">
             <div class="twelve columns header">
